made css changes to show image correctly aligned

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -53,9 +53,8 @@ form, fieldset{
 	height: 60px;
 	overflow:hidden;
 }
-.visual .heading-public-library a{
-	display:block;
-	height:100%;
+.visual .heading-public-library  img{
+	max-width: 260px;
 }
 .visual .pos1{
 	z-index:2;
